Update Help to latest fix

--- a/pqHelp.html
+++ b/pqHelp.html
@@ -69,6 +69,11 @@ See the file <tt>COPYING.TXT</tt> in the distribution folder.</p>
 </ul>
 <h2 id='New'>What's New in This Version</h2>
 <p>(See also <a href='#OldNew'>What Was New</a> for previous changes.)</p>
+<h3>What's New for 8 April 2013</h3>
+<p>Fix for a rather obscure bug in HTML conversion.
+In the event your document ended with an end-of-markup line
+such as <tt>Q/</tt> or <tt>F/</tt> with no newline after it, HTML conversion
+could thoroughly mess the document up.</p>
 <h3>What's New as of 5 April 2013</h3>
 <p>Multiple minor changes and fixes, again thanks to the
 diligence of <i>bibimbop</i>:</p>
