Correct page number class name to pagenum to match guiguts and the pg wiki

--- a/extras/header.html
+++ b/extras/header.html
@@ -377,7 +377,7 @@ div.poem { /* Style the entire poem */
 /* ************************************************************************
  * Visible page numbers in right margin.
  * ********************************************************************** */
-.pgnum { /* right-margin page numbers */
+.pagenum { /* right-margin page numbers */
 	/*visibility:hidden	uncomment to hide the page numbers */
 	font-size:75%;		/* tiny type.. */
 	color: #222;		/* ..dark gray.. */
@@ -387,11 +387,11 @@ div.poem { /* Style the entire poem */
 	padding: 0 0 0 0 ;	/* ..very compact */
 	margin: auto 0 auto 0;
 	}
-.pgnum a {/* when pagenum is a self-reference link (see text)... */
+.pagenum a {/* when pagenum is a self-reference link (see text)... */
 	text-decoration:none;	/* no underline.. */
 	color:#444;		/* same color as non-link */
 	}
-.pgnum a:hover { color:#F00; }/* turn red when hovered */
+.pagenum a:hover { color:#F00; }/* turn red when hovered */
 -->
 /* XML end  ]]>*/
     </style>
