--- a/pqHelp.html
+++ b/pqHelp.html
@@ -497,7 +497,7 @@ folio number for that page. Insert
 any unique pattern that you can extend later with regular expression
 replacements, for example <tt>[=%f=]</tt>. The full pattern for
 HTML folios in the side margin is:<br /><pre>
-<tt>&lt;span class='pgnum'>&lt;a id='Page_%f' name='Page_%f' href='#Page_%f'>[Pg&amp;nbsp;%f]&lt;/a>&lt;/span>\n</tt>
+<tt>&lt;span class='pagenum'>&lt;a id='Page_%f' name='Page_%f' href='#Page_%f'>[Pg&amp;nbsp;%f]&lt;/a>&lt;/span>\n</tt>
 </pre></p>
 <p>Inserting folio text is a single undo/redo operation.</p>
 <h2 id='Flow'>The Reflow Panel</h2>
